--- a/README
+++ b/README
@@ -1,52 +1,65 @@
+Procmail & formail mail processing package.
+Copyright (c) 1990-1991, S.R.van den Berg, The Netherlands.
+
 Some legal stuff:
 
 Use this software package at your own risk.  The programmer can not
-be held liable for any incurred damages due to the use of this software.
+be held liable for any incurred damages, directly or indirectly due to
+the use of this software.
 
 You are encouraged to distribute this package freely.  This package is
 however not to be sold (minor transfer costs excepted) or included in
 any commercially sold software package (if you want to do this anyway,
 contact me (address below), and we'll work something out).
 
-If you distribute it, please leave the package in tact.	 If you have some
-important changes that might be usefull to the rest of the world, contact
-me instead.
+If you distribute it, please leave the package intact.	You are allowed to
+take parts from this distribution and distribute these separately as long
+as you retain the copyright messages.  If you redistribute any part of this
+package in a modified form, be sure to mark the parts you changed.
+If you have some important changes that might be usefull to the rest of the
+world, contact me instead.
 
 -------------------------- SYSTEM REQUIREMENTS -------------------------------
 
-A ".forward" file (or equivalent) mechanism for forwarding mail (should work
-with (among others?) sendmail, smail and MMDF), *grep or equivalent.
+Any *NIX-alike system.
+
+Sendmail, smail, MMDF or compatible mailers.
 
 The most important system calls that need to be supported (among others):
-fork(),read(),write(),dup(),wait(),pipe(),getpwent()
+dup(),wait(),getpwent(),fork(),pipe()
 
 For a more complete list of all library references see "includes.h"
 
 ------------------------------ DESCRIPTION -----------------------------------
 
-The procmail mail processing program. (v2.11 1991/07/17)
+The procmail mail processing program. (v2.31 1991/10/22)
 
 Can be used to create mail-servers, mailing lists, sort your incoming mail
 into separate folders/files (real convenient when subscribing to one or more
 mailing lists), preprocess your mail, or selectively forward certain incoming
 mail automatically to someone.
 
+The accompanying formail program enables you to generate autoreplies, split up
+digests/mailboxes into the original messages, do some very simple
+header-munging, or force mail into mail-format (with leading From line).
+
 For installation instructions see the INSTALL file.
 
 ----------------------
 
-Although I can't guarantee that the procmail program will perform as
-required, I must say that I made the utmost effort to make procmail as
-robust as any program can be (every conceivable system error is caught *and*
-handled).
+I made the utmost effort to make procmail as robust as any program can be
+(every conceivable system error is caught *and* handled).
 
-procmail was designed to deliver the mail under the worst conditions
+Procmail was designed to deliver the mail under the worst conditions
 (file system full, out of swap space, process table full, file table full,
 missing support files, unavailable executables; it all doesn't matter).
 Should (in the unlikely event) procmail be unable to deliver your mail
-somewhere, the mail will bounce back to the sender.
+somewhere, the mail will bounce back to the sender or reenter the mailqueue
+(your choice).
 
 For a more extensive list of features see the FEATURES file.
+
+----------------------
 
 However, as with any program, bugs can not be completely ruled out.
 I tested the program extensively, and believe it should be relatively
@@ -66,7 +79,7 @@ time permits).
 Cheers,
        Stephen R. van den Berg	at RWTH-Aachen, Germany.
 
-Internet E-mail:		berg@messua.informaik.rwth-aachen.de
+Internet E-mail:		berg@messua.informatik.rwth-aachen.de
 				berg@physik.tu-muenchen.de
 
 Or:	P.O.Box 21074
@@ -82,7 +95,3 @@ The latest version can be obtained directly from the ftp-archive at:
 	as compressed tar file:		pub/unix/procmail.tar.Z
 	or in compressed shar format:	pub/unix/procmail.0?.Z
 ----------------------
-
-P.S. I don't mind if you feed the program files through your favourite C
-     beautifier first, so any patches need not necessarily be from the
-     original sources; I apply these patches by hand anyway.
