--- a/man/procmailex.man
+++ b/man/procmailex.man
@@ -2,7 +2,7 @@
 .ds Rv \\$3
 .ds Dt \\$4
 ..
-.Id $Id: procmailex.man,v 2.6 1992/04/29 15:55:09 berg Rel $
+.Id $Id: procmailex.man,v 2.7 1992/06/03 12:58:50 berg Rel $
 .de Sh
 .br
 .ne 11
@@ -126,10 +126,10 @@ However, it is advisable to put it
 any recipes that process the mails from subscribed mailinglists; it generally
 is not a good idea to generate autoreplies to mailinglists.
 .Sx 4
-: 2 h c
+: 2 +PASS_HEAD+ +CONTINUE+
 !^From +[^ ]*(postmaster|Mailer)
 !^From +YOUR_LOGIN_NAME
-| (formail \-+FM_REPY+ ; echo "Mail received.") | $SENDMAIL -t
+| (formail \-+FM_REPLY+ ; echo "Mail received.") | $SENDMAIL \-t
 .Ex
 A more complicated autoreply recipe, that implements the functional equivalent
 of the well known
@@ -148,7 +148,7 @@ value of the `To:' field.
 SHELL=/bin/sh    # for other shells, this might need adjustment
 ALREADYSENT=$MAILDIR/vacation     # the vacation database
 
-: 2 hWc:                          # the lockfile is important
+: 2 +PASS_HEAD++WAIT_EXIT_QUIET++CONTINUE+:                          # the lockfile is important
 !^From +[^ ]*(postmaster|Mailer)
 !^From +YOUR_LOGIN_NAME
 | FROM="`formail \-+FM_REPLY++FM_EXTRACT+ To:`" ;\\
@@ -157,7 +157,7 @@ ALREADYSENT=$MAILDIR/vacation     # the vacation database
   else echo "$FROM" >>$ALREADYSENT ;\\
   fi
 
-   :ahc
+   :+ALSO_N_IF_SUCC++PASS_HEAD++CONTINUE+
    | (formail \-+FM_REPLY+ ; echo "Mail received.") | $SENDMAIL \-t
 .Ex
 Store all messages concerning TeX in separate, unique filenames, in a directory
@@ -175,6 +175,22 @@ folder), again the texmail directory has to exist already.
 ^(To|Apparently-To|Cc|Subject):.*tex[^t]
 texmail/.
 .Ex
+Suppose you have two accounts, you use both accounts regularly, but they are
+in very distinct places (i.e. you can only read mail that arrived at either one
+of the accounts).  You would like to forward mail arriving at account one to
+account two, and the other way around.  The first thing that comes to mind is
+using .forward files at both sites; this won't work of course, since you will
+be creating a mail loop.  This mail loop can be avoided by inserting the
+following recipe in front of all other recipes in the +PROCMAILRC+ files on
+both sites.  If you make sure that you add the same X-Loop: field at both
+sites, mail can now safely be forwarded to the other account from either of
+them.
+.Sx 4
+:+CONTINUE+
+!^X-Loop: yourname@your.main.mail.address
+| formail \-+FM_ADD_ALWAYS+ "X-Loop: yourname@your.main.mail.address" | \\
+   $SENDMAIL \-oi yourname@the.other.account
+.Ex
 The following one is rather exotic, but it only serves to demonstrate a
 feature.  Suppose you have a file in your HOME directory called ".urgent",
 and the (one) person named in that file is the sender of an incoming mail,
@@ -185,8 +201,8 @@ increase LINEBUF if necessary):
 .Sx 5
 URGMATCH=`cat $HOME/.urgent`
 
-:B:
-$^From.*${URGENT}.*
+:+BODY_GREP+:
+$^From.*${URGMATCH}.*
 urgent
 .Re
 .Sh "SEE ALSO"
