--- a/README
+++ b/README
@@ -35,7 +35,7 @@ For a more complete list of all library references see "src/includes.h"
 
 ------------------------------ DESCRIPTION -----------------------------------
 
-The procmail mail processing program. (v2.80 1993/02/04)
+The procmail mail processing program. (v2.81 1993/02/19)
 
 Can be used to create mail-servers, mailing lists, sort your incoming mail
 into separate folders/files (real convenient when subscribing to one or more
@@ -84,7 +84,7 @@ v2.80 would not have looked the same:
 	David W. Tamkin		An excellent proofreader and betatester
 	 <dattier@gagme.chi.il.us>
 	Josh Laff		For stresstesting procmail (and me :-)
-	 <smiley@uiuc.edu>
+	 <jal@uiuc.edu>
 	Dan Jacobson		For his many useful suggestions
 	 <Dan_Jacobson@ATT.COM>
 
